--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>client</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-redis-client</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
