--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-redis-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-rabbitmq-client</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
